After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753269 - 3px black line at the bottom of the screen
3px black line at the bottom of the screen
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: panel
git master
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-05 05:46 UTC by Balló György
Modified: 2015-11-02 00:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Set default panel size to 27px (2.00 KB, patch)
2015-08-05 05:46 UTC, Balló György
none Details | Review
Screenshot of the problem (979.76 KB, image/png)
2015-08-05 13:55 UTC, Balló György
  Details

Description Balló György 2015-08-05 05:46:12 UTC
Created attachment 308763 [details] [review]
Set default panel size to 27px

After the following commit:
https://git.gnome.org/browse/gnome-panel/commit/?id=127aac5c472425d9983f19fb568c633a88b6e667

I see a 3 pixel wide black line at the bottom of the screen below the bottom panel with the default settings. If I open panel settings, it doesn't allow to set the panel size below 27px, but the initial size is 24px. A trivial fix is to set default panel size to 27px (patch attached), but probably the panel should handle this case automatically if the configured panel size is below to the minimal size.

Steps to reproduce:
Reset panel settings with 'gsettings reset-recursively org.gnome.gnome-panel', then relogin to GNOME Flashback. See the 3px horizontal black line at the bottom of screen.
Comment 1 Alberts Muktupāvels 2015-08-05 08:09:21 UTC
Can you attach screenshoot?

Changing default size is not right thing. We need to find why it is forced (?) to be bigger then default size.

What theme do you use?
Comment 2 Balló György 2015-08-05 13:55:41 UTC
Created attachment 308788 [details]
Screenshot of the problem

Screenshot attached. You can see the 3px horizontal black line at the bottom of screen.

I'm using the default Adwaita theme, and I get the same result with HighContrast. I can't reproduce the problem with the Orion theme, which allows 24px in panel settings. If I reduce the size of the default GTK+ font (default is Cantarell Regular 11), it solves the problem also.

So probably the minimal panel size calculation is broken somehow.
Comment 3 Balló György 2015-08-11 18:29:18 UTC
The panel should resize itself automatically if the minimal size is lower than the allowed. This was the behaviour before the applets are turned into in-process.
Comment 4 Balló György 2015-09-13 16:25:11 UTC
You could also reproduce this problem by setting text-scaling-factor to something large value:

$ gsettings set org.gnome.desktop.interface text-scaling-factor 1.5

You'll see that the top panel is resized properly, while the bottom panel has some black lines on the bottom of the screen, and won't fill it with the applets.
Comment 5 Balló György 2015-11-02 00:45:58 UTC
I confirm that this problem is solved. Thanks!