panel-toplevel: make sure panel widget has real size

Panel real size might be bigger then stored in settings - make
sure that panel widget has real size not one stored in settings.

https://bugzilla.gnome.org/show_bug.cgi?id=753269